force-app/main/default/objects/clofor_com_cfs__Port__c/fields/clofor_com_cfs__City_Name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__City_Name__c</fullName>
    <label>City Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>