force-app/main/default/objects/clofor_com_cfs__Port__c/fields/clofor_com_cfs__JURISDICTION_CUSTOMS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JURISDICTION_CUSTOMS__c</fullName>
    <label>JURISDICTION CUSTOMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>