force-app/main/default/objects/clofor_com_cfs__Port__c/fields/clofor_com_cfs__Port_Type__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Port_Type__c</fullName>
    <label>Port Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>