force-app/main/default/objects/clofor_com_cfs__Port__c/fields/clofor_com_cfs__PortCodeForCustomsSystem__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PortCodeForCustomsSystem__c</fullName>
    <label>PORT CODE FOR CUSTOMS SYSTEM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>