force-app/main/default/objects/clofor_com_cfs__Port__c/fields/clofor_com_cfs__PortCodeOnly__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PortCodeOnly__c</fullName>
    <label>PORT CODE ONLY</label>
    <length>6</length>
    <type>Text</type>
</CustomField>