force-app/main/default/objects/clofor_com_cfs__Port__c/fields/clofor_com_cfs__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Unique_Key__c</fullName>
    <description>This is the combination of new Port Code and Port Type to form a unique key for Port object. This field will not be shown on UI</description>
    <inlineHelpText>This is the combination of new Port Code and Port Type to form a unique key for Port object. This field will not be shown on UI</inlineHelpText>
    <label>Unique Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>