force-app/main/default/objects/clofor_com_cfs__Port__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <formula>TEXT(TIMEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>time</label>
    <type>Text</type>
</CustomField>