force-app/main/default/objects/clofor_com_cfs__Port__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>Port_Name_Japanese__c</columns>
    <columns>clofor_com_cfs__PortCodeOnly__c</columns>
    <columns>clofor_com_cfs__CodeOfPort__c</columns>
    <columns>clofor_com_cfs__Unique_Key__c</columns>
    <columns>clofor_com_cfs__Fullname__c</columns>
    <columns>clofor_com_cfs__Port_Type__c</columns>
    <columns>clofor_com_cfs__Country_Code__c</columns>
    <columns>clofor_com_cfs__Country_Name__c</columns>
    <columns>clofor_com_cfs__City_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>