force-app/main/default/objects/clofor_com_cfs__Port__c/listViews/clofor_com_cfs__SEA_PORT.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__SEA_PORT</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__CodeOfPort__c</columns>
    <columns>clofor_com_cfs__City_Name__c</columns>
    <columns>clofor_com_cfs__Country_Code__c</columns>
    <columns>clofor_com_cfs__Country_Name__c</columns>
    <columns>clofor_com_cfs__Fullname__c</columns>
    <columns>clofor_com_cfs__Port_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__Port_Type__c</field>
        <operation>equals</operation>
        <value>SEA</value>
    </filters>
    <filters>
        <field>clofor_com_cfs__Country_Code__c</field>
        <operation>equals</operation>
        <value>BE</value>
    </filters>
    <label>SEA PORT</label>
    <language>en_US</language>
</ListView>